# rl-multi-agent-network-security

./: .gitignore  README.md  pyproject.toml
configs/scenarios/: enterprise_network.yaml  enterprise_v2.yaml  small_enterprise.yaml
results/self_play_v3/: history.json
scripts/: generate_figures.py  generate_figures_from_model.py
src/netsim/agents/: __init__.py  scripted.py
src/netsim/environment/: __init__.py  actions.py  attacker_env.py  defender_env.py  game.py
src/netsim/evaluation/: __init__.py  baselines.py
src/netsim/network/: __init__.py  models.py  network.py
src/netsim/training/: __init__.py  self_play.py
tests/: test_baselines.py  test_environment.py  test_network.py  test_training.py
